# fast_zero_sync

./: pyproject.toml  pyproject.toml.save
fast_zero/: app.py  models.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: d8e1c3909bd2_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
